--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,23 @@
-<app-header/>
+<app-header />
 
 <main>
   <ul id="users">
-    <li>
-      <app-user/>
+    <!--
+    @for(user of users; track user.id){
+      <li>
+        <app-user [user]="user" (select)="onSelectUser($event)"/>
+      </li>
+    }
+    -->
+
+    <li *ngFor="let user of users">
+      <app-user [user]="user" (select)="onSelectUser($event)"/>
     </li>
+    
   </ul>
+
+  @if(selectedUser){
+    <app-task [taskUserName]="selectedUser.name"/>
+  }
+
 </main>
