adding individual task component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,18 @@
 
 <main>
   <ul id="users">
-    <!--
+
     @for(user of users; track user.id){
       <li>
-        <app-user [user]="user" (select)="onSelectUser($event)"/>
+        <app-user [user]="user" [selected]="user.id === selectedUserId" (select)="onSelectUser($event)"/>
       </li>
     }
-    -->
 
-    <li *ngFor="let user of users">
-      <app-user [user]="user" (select)="onSelectUser($event)"/>
-    </li>
     
   </ul>
 
   @if(selectedUser){
-    <app-task [taskUserName]="selectedUser.name"/>
+    <app-tasks [userName]="selectedUser.name" [userId]="selectedUser.id"/>
   }
 
 </main>
