--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,3 +1,11 @@
-<div>
-    <h3>{{taskUserName}}</h3>
-</div>
+<article>
+
+
+    <h2>{{taskInfo.title}}</h2>
+    <time>{{taskInfo.dueDate}}</time>
+    <p>{{taskInfo.summary}}</p>
+    <p class="actions">
+        <button>Complete</button>
+    </p>
+</article>
+
