--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -5,7 +5,7 @@
     <time>{{taskInfo.dueDate}}</time>
     <p>{{taskInfo.summary}}</p>
     <p class="actions">
-        <button>Complete</button>
+        <button (click)="onCompleteTask()">Complete</button>
     </p>
 </article>
 
