updating readme with angular basics

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -14,7 +14,7 @@
     <ul>
         @for(task of selectedUserTasks; track task.id){
             <li>
-                <app-task [taskInfo]="task" (complete)="onCompleteTask($event)"></app-task>
+                <app-task [taskInfo]="task"></app-task>
             </li>
         }
     </ul>
